# Chronos

./: .env.example  .gitignore  ARCHITECTURE.md  BOUNDED_TICK_PROCESSING_LIMITS.md  CCE_ENGINE_SPEC.md  CCP_SPECIFICATION.md  CHRONOS_API_BRIDGE_REPORT.md  CHRONOS_COGNITIVE_SESSION_SPECIFICATION.md  CHRONOS_DAEMON_SPEC.md  CHRONOS_INTEGRATION_REPORT.md  CHRONOS_INTEGRATION_VERIFICATION_AUDIT.md  CHRONOS_LIVE_EVENT_FLOW_VALIDATION.md  CHRONOS_OBJECT_MODEL.md  CHRONOS_PERCEPTION_WIRING_VERIFICATION.md  CHRONOS_RETROSPECTIVE_AUDIT.md  CHRONOS_RUNTIME_CONVERGENCE_REPORT.md  CHRONOS_RUNTIME_CONVERGENCE_VERIFICATION_AUDIT.md  CHRONOS_RUNTIME_VALIDATION.md  CHRONOS_STABILITY_AUDIT.md  CHRONOS_STATE_PROJECTOR_SPEC.md  CHRONOS_STATE_SPECIFICATION.md  CHRONOS_UI_MIGRATION_PLAN.md  CLIPBOARD_ADAPTER_SPEC.md  COGNITIVE_SESSION_ENGINE_SPEC.md  COMMITMENT_ENGINE_SPEC.md  Chronos_Actuall Thoughts.txt  DATABASE_SCHEMA.md  DEADLINE_ENGINE_SPEC.md  DECISION_ORCHESTRATOR_SPEC.md  DEMO_SCRIPT.md  DEPENDENCY_GRAPH.md  Dockerfile.daemon  ENTITY_RESOLUTION_SPEC.md  EXECUTION_RUNTIME_SPEC.md  FAILURE_AUDIT.md  FILEWATCHER_ADAPTER_SPEC.md  GIT_ADAPTER_SPEC.md  IMPLEMENTATION_BOARD.md  INTERFACES.md  KERNEL_FREEZE_REVIEW.md  (+17 more)
.agents/: AGENTS.md
.github/workflows/: chronos_ci_cd.yml
Vision/: 00_VISION.md  Chronos Research Protocol.md  Constitution.txt  Theory of Knowledge Work.md
architecture/: API_REFERENCE.md  CRATE_DEPENDENCY_GRAPH.md  DATABASE_ARCHITECTURE.md  EVENT_FLOW.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  LEGACY_VS_PCOS.md  MASTER_ARCHITECTURE.md  REPOSITORY_MAP.md  RUNTIME_SEQUENCE.md  TECHNICAL_DEBT_REGISTER.md
chronos-adapter-clipboard/: Cargo.toml  README.md
chronos-adapter-clipboard/src/: lib.rs
chronos-adapter-filewatcher/: Cargo.toml  README.md
chronos-adapter-filewatcher/src/: lib.rs
chronos-adapter-git/: Cargo.toml  README.md
chronos-adapter-git/src/: lib.rs
chronos-adapter-window-focus/: Cargo.toml  README.md
chronos-adapter-window-focus/src/: lib.rs
chronos-api-bridge/: Cargo.toml
chronos-api-bridge/src/: handlers.rs  lib.rs  router.rs  state.rs
chronos-bus/: Cargo.toml
chronos-bus/src/: lib.rs
chronos-commitment-inference-engine/: Cargo.toml
chronos-config/: Cargo.toml
chronos-config/src/: lib.rs
chronos-container/: Cargo.toml
chronos-container/src/: lib.rs
chronos-core/: Cargo.toml
chronos-core/src/: lib.rs
chronos-daemon/: Cargo.toml
chronos-daemon/src/: main.rs  observability.rs
chronos-decision-orchestrator/: Cargo.toml  README.md
chronos-decision-orchestrator/src/: lib.rs
chronos-event-orchestrator/: Cargo.toml  README.md
chronos-event-orchestrator/src/: lib.rs
chronos-execution-adapters/: Cargo.toml  README.md
chronos-execution-adapters/src/: lib.rs
chronos-execution-cce/: Cargo.toml  README.md
chronos-execution-cce/src/: lib.rs
chronos-execution-feedback/: Cargo.toml  README.md
chronos-execution-feedback/src/: lib.rs
chronos-execution-orchestration/: Cargo.toml  README.md
chronos-execution-orchestration/src/: lib.rs
chronos-execution-runtime/: Cargo.toml  README.md
chronos-execution-runtime/src/: lib.rs
chronos-logging/: Cargo.toml  README.md
chronos-logging/src/: lib.rs
chronos-memory-entity-resolution/: Cargo.toml  README.md
chronos-memory-entity-resolution/src/: lib.rs
chronos-memory-sessions/: Cargo.toml  README.md
chronos-memory-sessions/src/: lib.rs
chronos-memory-state/: Cargo.toml  README.md
chronos-memory-state/src/: lib.rs
chronos-pilot/: Dockerfile  README.md  chronos_local_db.json  index.html  metadata.json  server.ts
chronos-pilot/src/: App.tsx  index.css  types.ts
chronos-pilot/src/cognitive/: index.ts  intentGraph.ts  semanticInterpreter.ts  stabilityModel.ts  types.ts
chronos-pilot/src/cognitive-visualization/: CognitiveGraphView.tsx  graphEngine.ts  graphTypes.ts  layoutEngine.ts
chronos-pilot/src/components/: ARCPanel.tsx  CommitmentList.tsx  DatabaseViewer.tsx  DecisionVisibilityPanel.tsx  InteractiveSandbox.tsx  RiskForecaster.tsx  TelemetryConsole.tsx  (+1 more)
chronos-reasoning-coherence/: Cargo.toml  README.md
chronos-reasoning-coherence/src/: lib.rs
chronos-reasoning-commitments/: Cargo.toml  README.md
chronos-reasoning-commitments/src/: lib.rs
chronos-reasoning-continuity/: Cargo.toml  README.md
chronos-reasoning-continuity/src/: lib.rs
chronos-reasoning-dde/: Cargo.toml  README.md
chronos-reasoning-dde/src/: lib.rs
chronos-reasoning-decision/: Cargo.toml  README.md
chronos-reasoning-decision/src/: lib.rs
chronos-reasoning-intent/: Cargo.toml  README.md
chronos-reasoning-intent/src/: lib.rs
chronos-reasoning-pcm/: Cargo.toml  README.md
chronos-reasoning-pcm/src/: lib.rs
chronos-reasoning-reflection/: Cargo.toml  README.md
chronos-reasoning-reflection/src/: lib.rs
chronos-reasoning-risk/: Cargo.toml  README.md
chronos-reasoning-risk/src/: lib.rs
chronos-registry/: Cargo.toml
chronos-registry/src/: lib.rs
chronos-runtime-loop/: Cargo.toml  README.md
chronos-runtime-loop/benches/: tick_bench.rs
chronos-runtime-loop/src/: lib.rs
chronos-runtime-stability/: Cargo.toml  README.md
chronos-runtime-stability/src/: lib.rs
chronos-store/: Cargo.toml
chronos-store-sqlite/: Cargo.toml
chronos-store-sqlite/src/: lib.rs
chronos-store/src/: lib.rs
chronos-system-integrity/: Cargo.toml  README.md
chronos-system-integrity/src/: lib.rs
chronos-telemetry-bridge/: Cargo.toml
chronos-telemetry-bridge/src/: browser.rs  lib.rs  manual.rs  vscode.rs
extensions/browser-extension/: background.js  manifest.json
extensions/vscode-connector/: extension.js  package-lock.json  package.json
observability/: docker-compose.yml  prometheus.yml
python-worker/: arc_crawler.py  audit_results.json  cde_parser.py  embeddings.py  requirements.txt  simulator_worker.py  worker.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: che.rs  consequence.rs  db.rs  main.rs  server.rs  watcher.rs  window_focus.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  App.tsx  config.ts  index.css  types.ts
(+10 files in other folders)
