[package]
name = "chronos-adapter-git"
version = "0.1.0"
edition = "2024"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-bus = { path = "../chronos-bus" }
chronos-registry = { path = "../chronos-registry" }
chronos-container = { path = "../chronos-container" }
chronos-config = { path = "../chronos-config" }
chronos-logging = { path = "../chronos-logging" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread", "fs"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
