[package]
name = "chronos-adapter-window-focus"
version = "0.1.0"
edition = "2024"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-bus = { path = "../chronos-bus" }
chronos-registry = { path = "../chronos-registry" }
chronos-container = { path = "../chronos-container" }
chronos-config = { path = "../chronos-config" }
chronos-logging = { path = "../chronos-logging" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp"
] }

[dev-dependencies]
tempfile = "3.10"
