[package]
name = "chronos-api-bridge"
version = "0.1.0"
edition = "2024"


[lib]
name = "chronos_api_bridge"
path = "src/lib.rs"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-bus = { path = "../chronos-bus" }
chronos-store = { path = "../chronos-store" }
chronos-store-sqlite = { path = "../chronos-store-sqlite" }
chronos-registry = { path = "../chronos-registry" }
chronos-memory-entity-resolution = { path = "../chronos-memory-entity-resolution" }
chronos-memory-sessions = { path = "../chronos-memory-sessions" }
chronos-memory-state = { path = "../chronos-memory-state" }
chronos-reasoning-reflection = { path = "../chronos-reasoning-reflection" }
chronos-reasoning-commitments = { path = "../chronos-reasoning-commitments" }
chronos-event-orchestrator = { path = "../chronos-event-orchestrator" }
chronos-reasoning-dde = { path = "../chronos-reasoning-dde" }
chronos-reasoning-pcm = { path = "../chronos-reasoning-pcm" }
chronos-reasoning-risk = { path = "../chronos-reasoning-risk" }
chronos-decision-orchestrator = { path = "../chronos-decision-orchestrator" }
chronos-execution-cce = { path = "../chronos-execution-cce" }
chronos-telemetry-bridge = { path = "../chronos-telemetry-bridge" }
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }
