[package]
name = "chronos-config"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
