[package]
name = "chronos-reasoning-pcm"
version = "0.1.0"
edition = "2024"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-bus = { path = "../chronos-bus" }
chronos-store = { path = "../chronos-store" }
chronos-registry = { path = "../chronos-registry" }
chronos-logging = { path = "../chronos-logging" }
chronos-memory-entity-resolution = { path = "../chronos-memory-entity-resolution" }
chronos-memory-sessions = { path = "../chronos-memory-sessions" }
chronos-memory-state = { path = "../chronos-memory-state" }
chronos-reasoning-commitments = { path = "../chronos-reasoning-commitments" }
chronos-reasoning-dde = { path = "../chronos-reasoning-dde" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
