[package]
name = "chronos-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
