[package]
name = "chronos-store-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-store = { path = "../chronos-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
