[package]
name = "chronos-store"
version = "0.1.0"
edition = "2024"

[dependencies]
chronos-core = { path = "../chronos-core" }
tokio = { version = "1.37", features = ["sync", "macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
serde_json = "1.0"
