[package]
name = "chronos-telemetry-bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "chronos_telemetry_bridge"
path = "src/lib.rs"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-bus = { path = "../chronos-bus" }
chronos-store = { path = "../chronos-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
