[package]
name = "chronos-core"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.8", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6.1.1"
active-win-pos-rs = "0.8.2"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tauri-build = "1.5"
